--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
+*{
+  font-family: 'Roboto Mono', monospace !important; 
+}
+
 body {
   margin: 0;
 }
