--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,24 @@
 
 body {
   margin: 0;
+  min-height: 100vh;
+  background-color: rgb(0, 0, 0);
+  background-image: url("https://f4.bcbits.com/img/0021371731_130.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: #111;
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: rgba(135, 135, 135, 1); 
+  border-radius: 10px;
 }
