--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 *{
-  font-family: 'Roboto Mono', monospace !important; 
+  font-family: 'Montserrat', sans-serif !important; 
 }
 
 body {
   margin: 0;
   min-height: 100vh;
-  background-color: rgb(0, 0, 0);
+  background-color: #000;
   background-image: url("https://f4.bcbits.com/img/0021371731_130.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -24,6 +24,6 @@ body {
 }
  
 ::-webkit-scrollbar-thumb {
-  background: rgba(135, 135, 135, 1); 
+  background: #878787; 
   border-radius: 10px;
 }
