--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,7 @@
 body {
   margin: 0;
   min-height: 100vh;
-  background-color: #000;
-  background-image: url("https://f4.bcbits.com/img/0021371731_130.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+  background-color: #000000;
 }
 
 ::-webkit-scrollbar {
@@ -20,10 +15,10 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background: #111;
+  background: #000000;
 }
  
 ::-webkit-scrollbar-thumb {
-  background: #878787; 
+  background: #FFFFFF; 
   border-radius: 10px;
 }
